<resources>
    //Значения на английском
    <string name="app_name">myClinic</string>
    <string name="unknownUser_en">Unknown User</string>
    <string name="age_en">Age:</string>
    <string name="adress_en">Adress:</string>
    <string name="diagnosis_en">Diagnosis:</string>
    <string name="medication_en">Medication:</string>
    <string name="schedule_en">Make an appointment</string>
    <string name="my_profile_en">My profile</string>
    <string name="records_en">My records</string>
    <string name="settings_en">Settings</string>
    <string name="doctors_en">Doctors</string>
    <string name="logout_en">Logout</string>
    <string name="login_en">Login</string>
    <string name="exception_on_add_rec_en">Fields are incorrect or you exceeded the limit of pending records. Please, contact support.</string>
    <string name="open_en">Open</string>
    <string name="close_en">Close</string>
    <string name="accept_en">Accept</string>
    <string name="cancel_en">Cancel</string>
    <string name="select_the_doctor_en">Select the doctor:</string>
    <string name="cause_en">Annotation</string>
    <string name="select_date_en">Select date</string>
    <string name="select_avaliable_time_en">Select time:</string>
    <string name="confirm_en">Confirm</string>
    <string name="pref_title_change_language_en">Language</string>
    <string name="pref_summary_change_language_en">Tap on this option if you want to change language</string>
    <string name="pref_title_text_size_en">Change text size</string>
    <string name="pref_summary_text_size_en">To change text size - tap here. Min text size - 14sp and max text size - 20sp</string>
    <string name="pref_category_general_en">General</string>
    <string name="offline_mode_en">No internet connection</string>
    <string name="record_sending_en">Your record sended to the registry</string>
    <string name="selected_date_en">Select date:</string>
    <string name="cannot_remove_record_en">You exceeded the limit of pending records.</string>
    <string name="are_u_sure_en">Are you sure?</string>
    <string name="selected_time_en">Select time:</string>
    <string name="select_category_en">Select category:</string>
    <string name="parlor_en">Parlor:</string>
    <string name="phone_en">Phone:</string>
    <string name="set_rating_en">Set your rating for docror:</string>
    <string name="rating_en">Rating:</string>
    <string name="about_doc_en">About Doctor:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_extended_doctor_info">ExtendedDoctorInfoActivity</string>
    <string name="about_clinic_en">About Clinic</string>
    <string name="nearest_transport_en">Nearest transport:</string>
    <string name="avaliable_phones_en">Avaliable phones:</string>
    <string name="pref_category_extra_en">Extra</string>
    <string name="pref_title_map_mode_en">Allow map gestures</string>
    <string name="search_text_en">Search</string>
    <string name="fab_add_new_record_en">New record</string>
    <string name="fab_add_record_by_personal_prefers_en">New record at passend time</string>
    <string name="select_date_btn_en">Select date</string>
    <string name="select_time_btn_en">Select time</string>
    <string name="warning_time_en">Minutes which you select must be 00</string>
    <string name="create_the_record_en">Create the record?</string>
    <string name="send_info_en">Sending data. Please wait.</string>
    <string name="you_cant_do_it_en">Sorry, but you can\'t do it</string>
    <string name="cause_txt_en">Describe your problem...</string>
    <string name="doctor_wasnt_founded_en">Any doctor wasn\'t found</string>
    <string name="diagnoses_en">Diagnoses</string>

    //Значения на русском]
    <string name="diagnoses_ru">Диагнозы</string>
    <string name="doctor_wasnt_founded_ru">Не найдено ни одного врача</string>
    <string name="cause_txt_ru">Опишите вашу проблему...</string>
    <string name="you_cant_do_it_ru">Удаленная запись недоступна</string>
    <string name="send_info_ru">Отправка данных. Пожалуйста подождите.</string>
    <string name="create_the_record_ru">Создать запись?</string>
    <string name="warning_time_ru">Минуты должны быть 00</string>
    <string name="select_date_btn_ru">Выбрать дату</string>
    <string name="select_time_btn_ru">Выбрать время</string>
    <string name="fab_add_new_record_ru">Новая запись</string>
    <string name="fab_add_record_by_personal_prefers_ru">Новая запись по предпочтению</string>
    <string name="search_text_ru">Поиск</string>
    <string name="pref_title_map_mode_ru">Включить управление жестами для карты</string>
    <string name="pref_category_extra_ru">Дополнительные</string>
    <string name="about_clinic_ru">О клинике</string>
    <string name="nearest_transport_ru">Ближайший транспорт:</string>
    <string name="avaliable_phones_ru">Номера телефонов:</string>
    <string name="pref_category_general_ru">Основные настройки</string>
    <string name="parlor_ru">Кабинет:</string>
    <string name="phone_ru">Телефон:</string>
    <string name="rating_ru">Рейтинг:</string>
    <string name="set_rating_ru">Оставить отзыв о докторе:</string>
    <string name="offline_mode_ru">Нет интернет соединения</string>
    <string name="are_u_sure_ru">Вы уверены?</string>
    <string name="cannot_remove_record_ru">Вы привысили лимит отклоненных записей.</string>
    <string name="exception_on_add_rec_ru">Не все поля заполнены корректно, либо вы привысили лимит отмененных записей. В случае ошибки - обратитесь в поддержку.</string>
    <string name="record_sending_ru">Ваша запись отправлена в регистратуру</string>
    <string name="selected_date_ru">Выберите дату:</string>
    <string name="selected_time_ru">Выберите время:</string>
    <string name="select_category_ru">Выберите категорию:</string>
    <string name="doctors_ru">Врачи</string>
    <string name="unknownUser_ru">Unknown User</string>
    <string name="age_ru">Возраст:</string>
    <string name="adress_ru">Адрес:</string>
    <string name="diagnosis_ru">Диагноз:</string>
    <string name="medication_ru">Лечение:</string>
    <string name="schedule_ru">Запись на прием</string>
    <string name="my_profile_ru">Мой профиль</string>
    <string name="records_ru">Мои записи</string>
    <string name="settings_ru">Настройки</string>
    <string name="logout_ru">Выход</string>
    <string name="login_ru">Вход</string>
    <string name="open_ru">Открыто</string>
    <string name="close_ru">Закрыто</string>
    <string name="accept_ru">Принять</string>
    <string name="cancel_ru">Отменить</string>
    <string name="select_the_doctor_ru">Выберите доктора:</string>
    <string name="cause_ru">Причина</string>
    <string name="select_date_ru">Выбирите дату:</string>
    <string name="select_avaliable_time_ru">Выберите:</string>
    <string name="confirm_ru">Подтвердить</string>
    <string name="pref_title_change_language_ru">Язык</string>
    <string name="pref_summary_change_language_ru">Выберите эту опцию если хотите изменить язык</string>
    <string name="pref_title_text_size_ru">Изменить размер шрифта</string>
    <string name="pref_summary_text_size_ru">Чтобы изменить размер шрифта - нажмите тут. Минимальный размер - 14sp, максимальный - 20sp</string>
    <string name="about_doc_ru">Информация о враче:</string>


    //Ключи настроек
    <string name="change_lang_key">PREF_CHANGE_LANGUAGE</string>
    <string name="change_txt_size_key">PREF_CHANGE_TXT_SIZE</string>
    <string name="change_map_mode_key">PREF_CHANGE_MAP_MODE</string>


    <string-array name="avaliable_languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="avaliable_languages_values">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="avaliable_text_sizes">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>


</resources>
