<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_general_en"
        android:key="GeneralCategoryKey">

    <ListPreference
        android:key="@string/change_lang_key"
        android:entries="@array/avaliable_languages"
        android:entryValues="@array/avaliable_languages_values"
        android:summary="@string/pref_summary_change_language_en"
        android:title="@string/pref_title_change_language_en"/>

    <ListPreference
        android:defaultValue="14"
        android:entries="@array/avaliable_text_sizes"
        android:entryValues="@array/avaliable_text_sizes"
        android:key="@string/change_txt_size_key"
        android:summary="@string/pref_summary_text_size_en"
        android:title="@string/pref_title_text_size_en" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_extra_en"
        android:key="ExtraCategoryKey">


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/change_map_mode_key"
            android:title="@string/pref_title_map_mode_en" />
    </PreferenceCategory>
</PreferenceScreen>