<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
    <item android:id="@+id/nav_my_account"
        android:icon="@drawable/profile_icon"
        android:title="@string/my_profile_en"></item>

    <item android:id="@+id/nav_my_schedules"
        android:icon="@drawable/schedule_icon"
        android:title="@string/schedule_en"></item>

        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/doctor_icon"
            android:title="@string/doctors_en"></item>
        <item android:id="@+id/nav_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings_en"></item>
    </group>


    <item android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout_en"></item>
</menu>