<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightLightBlue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="7dp"
            android:scaleX="1.8"
            android:scaleY="1.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart_2_min" />

        <ImageView
            android:id="@+id/imgDoctorPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/txtDoctFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="NULL"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/imgDoctorPhoto"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/txtCategoryDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_thin"
            android:text="NULL"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDoctFName"
            tools:layout_editor_absoluteX="5dp" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_text_views_aqua_and_prizm"
        android:minHeight="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtParlorText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.9"
            android:text="@string/parlor_en" />

        <TextView
            android:id="@+id/txtParlor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="NULL" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_text_views_aqua_and_prizm"
        android:minHeight="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/phone_en" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="NULL" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_text_views_aqua_and_prizm"
        android:minHeight="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRatingText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/rating_en" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/rtRatingIndicator"
                style="@android:style/Widget.Holo.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_text_views_aqua_and_prizm"
        android:minHeight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAboutDoctorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/about_doc_en"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAboutDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/simple_text_views_aqua_and_prizm"
        android:minHeight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSetYourOwnRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_rating_en"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/simple_text_views_aqua_and_prizm">

            <RatingBar
                android:id="@+id/rtSetRating"
                style="@style/MyRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="1.0" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>